--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Hola</title>
 </head>
 <body>
-    <p>Filiberto Maldonado de Jesus</p>
-    <script src="alert.js"></script>
+    <p>Mundo</p>
+    <script src="alert.js"></script>git 
 </body>
 </html>
